v4 setting a tags to go to a detail html with article linked

--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -11,7 +11,7 @@
     <h3 class="center-align red lighten-3">{{title}}</h3>
     <ul class="collection">
         {% for country in country %}
-        <li class="collection-item"><a href="/gardyloo/details/{{country.id}}">{{country.name}}</a></li>
+        <li class="collection-item">{{country.name}}</li>
         {% endfor %}
     </ul>
 </body>
