--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -7,12 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Home</title>
 </head>
+    <header>
+        <div>
+            <nav>
+                <ul>
+                    <li>
+                        <a id="first" class="btn waves-effect waves-light btn grey"><i class="material-icons left">fingerprint</i>About Us</a>
+                    </li>
+                    <li>
+                        <a class="btn waves-effect waves-light btn grey"><i class="material-icons left">contacts</i>Contact Information</a>
+                    </li>
+                    <li>
+                        <a class="btn waves-effect waves-light btn grey"><i class="material-icons left">grade</i>User Login</a>
+                    </li>
+                    <li>
+                        <a class="btn waves-effect waves-light btn grey"><i class="material-icons left">language</i>Countries</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 <body>
-    <h3 class="center-align red lighten-3">{{title}}</h3>
-    <ul class="collection">
-        {% for country in country %}
-        <li class="collection-item">{{country.name}}</li>
-        {% endfor %}
-    </ul>
+    <!--{% for country in country %}-->
+    <!--<div class="card-panel hoverable">-->
+        <!--<h3 class="center-align red lighten-3">{{country.name}}</h3>-->
+            <!--<ul class="collection">-->
+
+                <!--<li class="collection-item">{{country.name}}</li>-->
+
+            <!--</ul>-->
+    <!--</div>-->
+    <!--{% endfor %}-->
+
+    {% for country in country %}
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="#">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">{{country.name}}<i class="material-icons right">more_vert</i></span>
+            </div>
+            <a href="{% url 'gardyloo:details' country.id %}">Go To</a>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+              <p>Snippet of info from essay</p>
+            </div>
+      </div>
+    {% endfor %}
 </body>
 </html>
+
+
