pictures uploading to proper places

--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -42,7 +42,7 @@
     {% for country in country %}
         <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="#">
+              <img class="activator" src="{{country.image.url}}">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">{{country.name}}<i class="material-icons right">more_vert</i></span>
