--- a/Django/mysite/gardyloo/templates/gardyloo/login_register.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/login_register.html
@@ -12,7 +12,7 @@
 
 
 <h2>Register</h2>
-    <form action="{% url 'todo:register' %}" method="post">
+    <form action="{% url 'gardyloo:register' %}" method="post">
         {% csrf_token %}
         <input type="hidden" name="next" value="{{next}}"/>
         <input type="text" name="username" placeholder="username" required/>
@@ -23,7 +23,7 @@
 
 
     <h2>Login</h2>
-    <form action="{% url 'todo:login' %}" method="post">
+    <form action="{% url 'gardyloo:login' %}" method="post">
         {% csrf_token %}
         <input type="hidden" name="next" value="{{next}}"/>
         <input type="text" name="username" placeholder="username" required/>
