--- a/Django/mysite/gardyloo/templates/gardyloo/quiz.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/quiz.html
@@ -9,5 +9,17 @@
 </head>
 <body>
     <h1>This is the quiz page</h1>
+
+<!--
+basic functionality
+display question
+4 card appear 1 correct 3 random
+animation @click the 3 wrong answers disappear
+count correct answers vs questions asked
+
+more advanced select region but right now only have europe
+
+-->
+
 </body>
 </html>
