working on adding quiz to db and functionality

--- a/Django/mysite/gardyloo/templates/gardyloo/quiz.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/quiz.html
@@ -103,11 +103,11 @@ more advanced select region but right now only have europe
 -->
 
 <script>
-    new Vue({
-    data: {
-        questions: [{% for question in questions %}"{{question}}",{%endfor%}]
-        questions: ['a', 'b', 'c']
-    }
+    // new Vue({
+    // data: {
+    //     questions: [{% for question in questions %}"{{question}}",{%endfor%}]
+    //     questions: ['a', 'b', 'c']
+    // }
     new Vue({
         delimiters: ['[[', ']]'],
         el: '#quiz',
