--- a/Django/mysite/gardyloo/templates/gardyloo/quiz.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/quiz.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <style>
@@ -14,127 +16,59 @@
         box-sizing: border-box;
     }
 
-    .parent {
-        height: 18%;
-        width: 18%;
-        padding: 4px;
-        margin: 4px;
-    }
-
-    .container {
-        display: block;
-        width: 100%;
-        height: auto;
-        position: relative;
-        padding: 12px
-    }
-
-    img {
-        display: block;
-        max-width: 100%;
-        max-height: 275px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
-
-    .country-cards {
-        flex-wrap: wrap;
-        display: inline-flex;
-    }
-
-    .country__card {
-        box-shadow: 0 0 50px;
-        transition: 0.3s color;
-    }
-
-    .country__card:hover {
-        color: goldenrod;
-    }
-
-    .bottom {
-        position: absolute;
-        bottom: 4px;
-        width: 100%;
-
-    }
-
-    .card-content {
-        contain: size;
-    }
 </style>
 <body>
 <h1>This is the quiz page</h1>
 <div id="quiz">
-    <h4>[[questions]]</h4>
-    <h4>[[countries]]</h4>
+    <h5><< question >></h5>
+
+        <p v-for="option in answer"> << option >> </p>
+
+
+    <p><< correct_answer_index >></p>
+
 
 </div>
 
 
-
-
-<!--
-basic functionality
-display question
-4 card appear 1 correct 3 random
-animation @click the 3 wrong answers disappear
-count correct answers vs questions asked
-
-more advanced select region but right now only have europe
-
-
-
-})
--->
-
 <script>
-    // new Vue({
-    // data: {
-    //     questions: [{% for question in questions %}"{{question}}",{%endfor%}]
-    //     questions: ['a', 'b', 'c']
-    // }
-    function random_number() {
-
-        return Math.floor(Math.random()*(4+1))
-    }
-    function random_country() {
-        // potentially 0 not + 1
-        return Math.floor(Math.random()*(21+1))
-    }
 
     new Vue({
-        delimiters: ['[[', ']]'],
+        delimiters: ["<<",">>"],
         el: '#quiz',
         data: {
-            questions: [{% for question in questions %}"{{question}}"{% endfor %}],
-            countries: [{% for country in countries %}"{{country}}"{% endfor %}],
-            quizIsRunning: false,
-            questionsAsked: 0,
-            correctAnswers: 0,
-
+            counter: 0,
+            correct: 0,
+            question: "",
+            answer: [],
+            correct_answer_index: [],
+            guess: [],
         },
         methods: {
-            //    3 wrong cards, 1 correct
-            startQuiz: function () {
-
+            start_quiz: function() {
+                let quiz = this
+                axios.get("{% url 'gardyloo:quiz_question' %}")
+                    .then(function (response) {
+                        quiz.question = response.data.question
+                        quiz.answer = response.data.answer
+                        quiz.correct_answer_index = response.data.correct_answer_index
+                    })
             },
-
-            //    redirect to home page
-            endQuiz: function () {
-                ('gardyloo:home')
+            //@click
+            // check_question: function() {
+            //     if index of guess = correct_answer_index
+            //         this.correct += 1
+            // },
+            next_question: function() {
+                this.start_quiz()
+                this.counter += 1
             },
-
-            //     4 new cards 3 wrong one correct / random question
-            nextQuestion: function () {
-                  questions[i] = random_number
-                  countries[i] = random_country
-                  questionsAsked += 1
-            },
+        },
+        created: function() {
+            this.start_quiz()
         }
     })
+
 </script>
 </body>
 </html>
