--- a/Django/mysite/gardyloo/templates/gardyloo/Home.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/Home.html
@@ -58,12 +58,17 @@
     .bottom {
         position: absolute;
         bottom: 4px;
-        width: 100%;
+        width: 95%;
 
     }
 
     .card-content {
         contain: size;
+    }
+    .kluge {
+        left:0;
+        margin: 2px;
+        padding: 4px;
     }
 </style>
 <header>
@@ -93,21 +98,21 @@
     <div id="about">
         <h4 class="center">How this all works</h4>
         <h2>Welcome: {{user.username}}</h2>
-        <p class="flow-text">The information, in the card, contains all of the essential information to make you an
-            informed traveler. There are several
-            ways that you can interact with this website. Most simple, and somewhat a pre-requisite to the second
-            option, is to
-            go and study the cards by clicking the "Go To" link which will lead you to a detailed view of your selected
-            country. This holds
-            several key attributes of a country and finally an essay discussing proper conduct as an American traveling
-            abroad.
-            The second option is to select a region and click the quiz button. This will randomly ask a question based
-            on the countries in the region
-            you selected. This is intended to be a fun way to test you knowledge on foreign countries and ensures you
-            have the base amount of knowledge
-            to actively and respectfully interact in a foreign country and culture. Just remember it is our duty as a
-            traveler to be informed of the Country's laws and cultural normals to not be abrasive or disrespectful;
-            not knowing or being unaware isn't a reasonable excuse... anymore.</p>
+        <!--<p class="flow-text">The information, in the card, contains all of the essential information to make you an-->
+            <!--informed traveler. There are several-->
+            <!--ways that you can interact with this website. Most simple, and somewhat a pre-requisite to the second-->
+            <!--option, is to-->
+            <!--go and study the cards by clicking the "Go To" link which will lead you to a detailed view of your selected-->
+            <!--country. This holds-->
+            <!--several key attributes of a country and finally an essay discussing proper conduct as an American traveling-->
+            <!--abroad.-->
+            <!--The second option is to select a region and click the quiz button. This will randomly ask a question based-->
+            <!--on the countries in the region-->
+            <!--you selected. This is intended to be a fun way to test you knowledge on foreign countries and ensures you-->
+            <!--have the base amount of knowledge-->
+            <!--to actively and respectfully interact in a foreign country and culture. Just remember it is our duty as a-->
+            <!--traveler to be informed of the Country's laws and cultural normals to not be abrasive or disrespectful;-->
+            <!--not knowing or being unaware isn't a reasonable excuse... anymore.</p>-->
 
     </div>
     <div class="country-cards container">
@@ -119,7 +124,7 @@
             <!--@click-->
             <a href="{% url 'gardyloo:details' country.id %}">Go To</a>
             <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4 bottom">{{country.name}}</span>
+                <span class="kluge flow-text center-align card-title grey-text text-darken-4 bottom">{{country.name}}</span>
             </div>
         </div>
         {% endfor %}
