--- a/Django/mysite/gardyloo/templates/gardyloo/details.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/details.html
@@ -30,10 +30,8 @@
                             class="material-icons left">contacts</i>Quiz</a>
                 </li>
                 <li>
-                    <a href="{% url 'gardyloo:login' %}" class="btn waves-effect waves-light btn grey"><i
-                            class="material-icons left">grade</i>User Login</a>
+                    <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">home</i>Home</a>
                 </li>
-
             </ul>
         </div>
     </nav>
