--- a/Django/mysite/gardyloo/templates/gardyloo/quiz.html
+++ b/Django/mysite/gardyloo/templates/gardyloo/quiz.html
@@ -29,23 +29,24 @@
         display: block;
         margin: 0 25%;
     }
+    .valign-wrapper {
 
+    }
 </style>
 <header>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper container">
             <ul>
-                <li>
-                    <a class="btn waves-effect waves-light btn grey"><i
-                            class="material-icons left">language</i>Search</a>
-                </li>
-                <li>
+                <li class="valign-wrapper">
                     <a href="{% url 'gardyloo:quiz' %}" class="btn waves-effect waves-light btn grey"><i
                             class="material-icons left">contacts</i>Quiz</a>
                 </li>
-                <li>
+                <li class="valign-wrapper">
                     <a href="{% url 'gardyloo:login' %}" class="btn waves-effect waves-light btn grey"><i
                             class="material-icons left">grade</i>User Login</a>
+                </li>
+                <li class="valign-wrapper">
+                    <a href="{% url 'gardyloo:home_page' %}" class="btn waves-effect waves-light btn grey"><i class="material-icons left">home</i>Home</a>
                 </li>
 
             </ul>
